<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn_close_forgot_pass"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_close" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/txt_title_forgot_password" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_forgotpass_1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.50">

            <ProgressBar
                android:id="@+id/pb_forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="30sp"
                android:visibility="gone"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorGrey"
                android:textSize="11sp"
                android:textStyle="bold"
                android:text="@string/txt_email" />

            <EditText
                android:id="@+id/edt_email_forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:textSize="15dp"
                android:theme="@style/MyEditTextTheme"
                android:text="" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:text="@string/txt_recover_forgot_pass" />

        <LinearLayout
            android:id="@+id/ll_cadastrar_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="10sp"
                android:text="@string/txt_question_register_forgot_pass" />

            <TextView
                android:id="@+id/btn_register_forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:textAlignment="center"
                android:textSize="10sp"
                android:textStyle="bold"
                android:text="@string/txt_register_forgot_pass" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
