<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/llactivity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30sp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.50">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25sp"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo_gameon" />

            <ProgressBar
                android:id="@+id/pb_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/txt_title_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrey"
                android:textStyle="bold"
                android:textSize="11sp"
                android:text="@string/title_email_act_login" />

            <EditText
                android:id="@+id/edt_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title_login"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:text="paulo.richa@hotmail.com" />

            <TextView
                android:id="@+id/txt_title_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_email_login"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorGrey"
                android:textStyle="bold"
                android:textSize="11sp"
                android:text="@string/title_password_act_login"/>

            <EditText
                android:id="@+id/edt_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title_password"
                android:textColor="#000000"
                android:inputType="textPassword"
                android:textSize="15dp"
                android:text="123456" />

            <TextView
                android:id="@+id/btn_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/edt_password_login"
                android:textStyle="bold"
                android:text="@string/btn_forgot_password_act_login" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_below="@+id/btn_forgot_password"
                android:layout_marginTop="25dp"
                android:background="@color/colorPrimary"
                android:elevation="0sp"
                android:textColor="#FFFFFF"
                android:text="@string/txt_btn_login_act_login" />

            <!--<com.facebook.login.widget.LoginButton
                android:id="@+id/btn_login_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="17dp"
                android:layout_below="@+id/btn_login"
                android:layout_centerHorizontal="true" />-->

            <LinearLayout
                android:id="@+id/ll_register_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/txt_register_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    android:text="@string/txt_register_act_login"/>

                <TextView
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:text="@string/txt_register_act_login_2" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
