<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:id="@+id/llContent">

    <LinearLayout
        android:id="@+id/lnContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32sp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.50">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo_gameon" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/txtLabelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/title_email_act_login"
                android:fontFamily="@font/montserrat_bold"/>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtLabelEmail"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:hint="Digite seu e-mail"
                android:text="paulo.richa@hotmail.com"
                android:fontFamily="@font/montserrat_regular"/>

            <TextView
                android:id="@+id/txtLabelPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtEmail"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/title_password_act_login"
                android:fontFamily="@font/montserrat_bold"/>

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtLabelPassword"
                android:textColor="@color/colorBlack"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:hint="********"
                android:text="123456"
                android:fontFamily="@font/montserrat_regular"/>

            <TextView
                android:id="@+id/txtRememberPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/edtPassword"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:text="@string/btn_forgot_password_act_login"
                android:fontFamily="@font/montserrat_regular"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_below="@+id/txtRememberPassword"
                android:layout_marginTop="25dp"
                android:background="@color/colorPrimary"
                android:elevation="0sp"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:text="@string/txt_btn_login_act_login"
                android:fontFamily="@font/montserrat_bold"/>

            <LinearLayout
                android:id="@+id/llRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogin"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:layout_marginTop="25dp">

                <TextView
                    android:id="@+id/txtLabelRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textSize="12sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/txt_register_act_login"
                    android:fontFamily="@font/montserrat_regular"/>

                <TextView
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/txt_register_act_login_2"
                    android:fontFamily="@font/montserrat_bold"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
</RelativeLayout>