<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    app:ignore="NamespaceTypo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:layout_marginRight="35sp"
            android:layout_marginLeft="35sp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/txt_title_matches_statics_profile_player"/>

        <View
            android:layout_width="30sp"
            android:layout_height="2sp"
            android:layout_marginTop="3sp"
            android:layout_marginLeft="35sp"
            android:layout_marginStart="35sp"
            android:background="@color/colorAccent"
            app:ignore="SmallSp" />

        <LinearLayout
            android:id="@+id/ll_num_statistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="0sp"
            android:paddingRight="30sp"
            android:paddingLeft="30sp" >

            <RelativeLayout
                android:id="@+id/rel_win"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.35">

                <TextView
                    android:id="@+id/txt_win"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10sp"
                    android:textSize="12sp"
                    android:text="@string/txt_title_wins_statics_profile_player" />

                <TextView
                    android:id="@+id/txt_num_wins_profile_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/txt_win"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:text="" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_draws"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.35">

                <TextView
                    android:id="@+id/txt_draws"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10sp"
                    android:textSize="12sp"
                    android:text="@string/txt_title_draws_statics_profile_player" />

                <TextView
                    android:id="@+id/txt_num_draws_profile_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_draws"
                    android:layout_centerHorizontal="true"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:text="" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_losses"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.35">

                <TextView
                    android:id="@+id/txt_losses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10sp"
                    android:textSize="12sp"
                    android:text="@string/txt_title_loses_statics_profile_player" />

                <TextView
                    android:id="@+id/txt_num_losses_profile_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_losses"
                    android:layout_centerHorizontal="true"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:text="" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_chart"
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:layout_marginTop="15sp"
            android:paddingRight="30sp"
            android:paddingLeft="30sp"
            android:layout_marginBottom="0sp" >

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
